--- a/src/app/user-management/user/user.component.html
+++ b/src/app/user-management/user/user.component.html
@@ -129,14 +129,14 @@
                           {{'Common.Button.Edit'| translate}}
                         </a>
 
-                        <a class="dropdown-item" data-toggle="modal" (click)="addUser()">
+                        <a class="dropdown-item" data-toggle="modal" (click)="addUser(dataItem)">
                           <i class="fa fa-pencil m-r-5"></i>
-                          Add User Account
+                          Add User Authorities
                         </a>
 
                         <a class="dropdown-item" data-toggle="modal" (click)="edit(dataItem)">
                           <i class="fa fa-pencil m-r-5"></i>
-                          Edit User Account
+                          Edit User Authorities
                         </a>
 
                     </div>
