--- a/src/app/login/first-login/first-login.component.html
+++ b/src/app/login/first-login/first-login.component.html
@@ -1,36 +1,38 @@
 <div class="login-box">
   <div class="login-logo">
-      <a href="#" class="font-khmer-cursive"><b>Admin</b>LTE</a>
+      <a class="font-khmer-cursive"><b>Admin</b>LTE</a>
   </div>
 
   <div class="login-box-body">
-      <p class="login-box-msg font-khmer-cursive"><b>{{'FirstLogin.Label.FirstLogin'| translate}}</b></p>
+      <p class="login-box-msg font-khmer-cursive">
+        <b>{{'FirstLogin.Label.FirstLogin'| translate}}</b>
+      </p>
 
 
       <div class="form-group has-feedback">
         <label class="font-khmer-cursive">{{'FirstLogin.Label.UserName'| translate}}</label>
-          <input type="text" disabled class="form-control" [ngClass]="userName? 'active-input' : ''" placeholder="Email" [(ngModel)]="userName" (keypress)="enterLoginHandler($event)" (keydown)="tapfocus($event)">
+          <input type="text" disabled class="form-control" [ngClass]="firstLogIn.userName ? 'active-input' : ''" placeholder="Email" [(ngModel)]="firstLogIn.userName">
           <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
 
       <div class="form-group has-feedback">
         <label class="font-khmer-cursive">{{'FirstLogin.Label.CurrentPassword'| translate}}</label>
         <span class="text-danger"> *</span>
-        <input type="password" class="form-control" [ngClass]="currentPassword? 'active-input' : ''" placeholder="{{'FirstLogin.Holder.EnterCurrentPassword'| translate}}" [(ngModel)]="currentPassword" (keypress)="enterLoginHandler($event)" (keydown)="tapfocus($event)">
+        <input type="password" class="form-control" [ngClass]="firstLogIn.currentPassword? 'active-input' : ''" placeholder="{{'FirstLogin.Holder.EnterCurrentPassword'| translate}}" [(ngModel)]="firstLogIn.currentPassword">
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
 
       <div class="form-group has-feedback">
         <label class="font-khmer-cursive">{{'FirstLogin.Label.NewPassword'| translate}}</label>
         <span class="text-danger"> *</span>
-        <input type="password" class="form-control" [ngClass]="newPassword? 'active-input' : ''" placeholder="{{'FirstLogin.Holder.EnterNewPassword'| translate}}" [(ngModel)]="newPassword" (keypress)="enterLoginHandler($event)" (keydown)="tapfocus($event)">
+        <input type="password" class="form-control" [ngClass]="firstLogIn.newPassword ? 'active-input' : ''" placeholder="{{'FirstLogin.Holder.EnterNewPassword'| translate}}" [(ngModel)]="firstLogIn.newPassword">
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
 
       <div class="form-group has-feedback">
         <label class="font-khmer-cursive">{{'FirstLogin.Label.ConfirmPassword'| translate}}</label>
         <span class="text-danger"> *</span>
-        <input class="form-control" [ngClass]="password? 'active-input' : ''" placeholder="{{'FirstLogin.Holder.EnterConfirmPassword'| translate}}" type="password" [(ngModel)]="confirmPassword" (keypress)="enterLoginHandler($event)" #passwordElement>
+        <input class="form-control" [ngClass]="firstLogIn.confirmPassword ? 'active-input' : ''" placeholder="{{'FirstLogin.Holder.EnterConfirmPassword'| translate}}" type="password" [(ngModel)]="firstLogIn.confirmPassword">
         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
       </div>
 
@@ -41,7 +43,7 @@
                        <span style="margin: 0px 1px 0px 5px;" class="font-khmer-cursive">Remember Me</span> -->
                   </label>
 
-                <button style ="margin-right: 0;" class="k-button btn-w100px-h35px font-khmer-cursive btn-add-00 l" (click) ="login()">
+                <button style ="margin-right: 0;" class="k-button btn-w100px-h35px font-khmer-cursive btn-add-00 l" (click) ="change()">
                     <span class="k-icon k-i-login"></span>
                     <span style="margin-left: 5px;">{{'FirstLogin.Button.Change'| translate}}</span>
                 </button>
