--- a/src/app/user-management/user-authentication-add/user-authentication-add.component.html
+++ b/src/app/user-management/user-authentication-add/user-authentication-add.component.html
@@ -30,19 +30,19 @@
 
               <div class="row">
                 <div class="form-group col-md-6">
-                    <label for="inputPassword4">{{'UserAuthentication.Label.Password' | translate}}</label>
-                    <input type="text" [ngClass]="name? 'active-input' : ''" class="form-control" [(ngModel)]="name" placeholder="{{'UserAuthentication.Holder.EnterPassword' | translate}}">
+                    <label for="inputPassword4">{{'UserAuthentication.Label.DefaultPassword' | translate}} : {{password}}</label>
+                    <!-- <input type="text" [ngClass]="name? 'active-input' : ''" class="form-control" [(ngModel)]="name" placeholder="{{'UserAuthentication.Holder.EnterPassword' | translate}}">
                     <div class="in_box">
                         <button (click)="undefinedValue('name')" type="button" [ngClass]="name? 'btn_del' : ''" tabindex=-1 class="btn" tabindex=-1 tabindex=-1></button>
-                    </div>
+                    </div> -->
                 </div>
-                <div class="form-group col-md-6">
+                <!-- <div class="form-group col-md-6">
                   <label for="inputPassword4">{{'UserAuthentication.Label.ConfirmPassword' | translate}}</label>
                   <input type="text" [ngClass]="description? 'active-input' : ''" class="form-control" [(ngModel)]="description" placeholder="{{'UserAuthentication.Holder.EnterConfirmPassword' | translate}}">
                   <div class="in_box">
                       <button (click)="undefinedValue('description')" type="button" [ngClass]="description? 'btn_del' : ''" tabindex=-1 class="btn" tabindex=-1 tabindex=-1></button>
                   </div>
-                </div>
+                </div> -->
               </div>
 
               <!-- <div class="row">
